--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "@xkeshi/image-compressor": "^0.5.3",
         "b64-to-blob": "^1.2.19",
         "babel-preset-es2015": "^6.24.1",
+        "base64-arraybuffer": "^0.1.5",
+        "blob-to-arraybuffer": "0.0.1",
         "bulma": "^0.7.1",
         "countries-list": "^2.3.1",
         "cropperjs": "^1.2.2",
