--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=KnocksApp
 APP_ENV=local
 APP_KEY=base64:Omw9u9LNGWvN7rE8IqeSfSIXhD8rHlCOJ5hGbbUWzNw=
 APP_DEBUG=true
@@ -24,8 +24,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=a7a66f39b69577
+MAIL_PASSWORD=5f7e2f60f65620
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
