--- a/.env
+++ b/.env
@@ -22,11 +22,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=knocks.share@gmail.com
-MAIL_PASSWORD=hdgjvhditlrfiroj
-MAIL_ENCRYPTION=tls
+MAIL_HOST=smtp.mailgun.org
+MAIL_PORT=2525
+MAIL_USERNAME=postmaster@mg.knocksapp.com
+MAIL_PASSWORD=91707e0c48f3b74afda3df5f34e38a6b-b892f62e-6bc7f4f0
+MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
