--- a/.env
+++ b/.env
@@ -22,10 +22,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailgun.org
+MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=postmaster@mg.knocksapp.com
-MAIL_PASSWORD=91707e0c48f3b74afda3df5f34e38a6b-b892f62e-6bc7f4f0
+MAIL_USERNAME=6193148b837c51
+MAIL_PASSWORD=698f6eeaed72bf
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
