--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "jenssegers/agent": "^2.6",
         "laravel/framework": "5.5.*",
         "laravel/socialite": "^3.0",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0"    
     },
     "require-dev": {
         "filp/whoops": "~2.0",
@@ -36,6 +36,7 @@
     "extra": {
         "laravel": {
             "dont-discover": [
+                "laravel/dusk"
             ]
         }
     },
@@ -47,6 +48,7 @@
             "@php artisan key:generate"
         ],
         "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
         ]
     },
