--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "jenssegers/agent": "^2.6",
         "laravel/framework": "5.5.*",
         "laravel/socialite": "^3.0",
-        "laravel/tinker": "~1.0"    
+        "laravel/tinker": "~1.0",
+        "nesbot/carbon": "^1.31"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
