--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-APP_NAME=Laravel
-APP_ENV=production
-APP_KEY=
-APP_DEBUG=false
+APP_NAME=KnocksApp
+APP_ENV=local
+APP_KEY=base64:Omw9u9LNGWvN7rE8IqeSfSIXhD8rHlCOJ5hGbbUWzNw=
+APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=knocks
-DB_USERNAME=forge
+DB_USERNAME=root
 DB_PASSWORD=caffeine
 
 BROADCAST_DRIVER=log
@@ -22,12 +22,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
+MAIL_HOST=smtp.mailgun.org
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=postmaster@mg.knocksapp.com
+MAIL_PASSWORD=91707e0c48f3b74afda3df5f34e38a6b-b892f62e-6bc7f4f0
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_SECRET=	
