--- a/.env
+++ b/.env
@@ -8,9 +8,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=knocks
-DB_USERNAME=root
-DB_PASSWORD=caffeine
+DB_DATABASE=knocksdev
+DB_USERNAME=forge
+DB_PASSWORD=j8J19gW3C5Fp3Qy9AKD9
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
