--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
             "@php artisan key:generate"
         ],
         "post-autoload-dump": [
-         
+          "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"  
         ]
     },
     "config": {
